--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ pylint_report.txt
 CMakeUserPresets.json
 .DS_Store
 EnvironmentSimulator/Libraries/esminiJS/example/esmini.js
+
+MySimulator/build
+MySimulator/CMakeLists.txt
