feat: Introduce GT_esmini extension with vehicle light functionality, auto-light control, and custom OpenSCENARIO actions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -302,3 +302,5 @@ set(EXTERNALS_FMT_PATH
 # ############################### Compiling targets ##################################################################
 
 add_subdirectory(EnvironmentSimulator)
+add_subdirectory(GT_esmini)
+
