feat: Implement OpenSCENARIO AppearanceAction and LightStateAction parsing with corresponding tests and documentation.

--- a/GT_esmini/test/CMakeLists.txt
+++ b/GT_esmini/test/CMakeLists.txt
@@ -1,7 +1,44 @@
 # GT_esmini Test Directory
-# Phase 1: Placeholder for future tests
-# Phase 2+: Unit tests, integration tests, scenario-based tests
+include(${CMAKE_SOURCE_DIR}/support/cmake/common/unittest.cmake)
 
-message(STATUS "GT_esmini tests will be added in Phase 2+")
+# Unit Tests
+set(UNIT_TEST_SOURCES
+    ${CMAKE_CURRENT_SOURCE_DIR}/unit/test_ScenarioReaderParsing.cpp
+)
 
-# Placeholder - tests will be added in future phases
+set(UNIT_TEST_TARGET test_ScenarioReaderParsing)
+
+unittest(${UNIT_TEST_TARGET} "${UNIT_TEST_SOURCES}" 
+    ${TARGET_STATIC}
+    ScenarioEngine
+    CommonMini
+    RoadManager
+    ${FMT_LIBRARIES}
+)
+
+target_include_directories(${UNIT_TEST_TARGET} PRIVATE
+    ${CMAKE_SOURCE_DIR}/GT_esmini
+)
+
+# Integration Test Loader
+set(LOADER_SOURCES
+    ${CMAKE_CURRENT_SOURCE_DIR}/integration/GT_Loader.cpp
+)
+set(LOADER_TARGET GT_Loader)
+
+add_executable(${LOADER_TARGET} ${LOADER_SOURCES})
+target_link_libraries(${LOADER_TARGET} PRIVATE 
+    ${TARGET_SHARED} # Link against GT_esminiLib DLL/LIB
+)
+target_include_directories(${LOADER_TARGET} PRIVATE
+    ${CMAKE_SOURCE_DIR}/GT_esmini
+)
+
+# Register Integration Tests
+file(GLOB SCENARIO_FILES "${CMAKE_CURRENT_SOURCE_DIR}/scenarios/*.xosc")
+foreach(SCENARIO ${SCENARIO_FILES})
+    get_filename_component(TEST_NAME ${SCENARIO} NAME_WE)
+    add_test(NAME Integration_${TEST_NAME} COMMAND ${LOADER_TARGET} ${SCENARIO})
+endforeach()
+
+message(STATUS "GT_esmini: Added ${UNIT_TEST_TARGET} and ${LOADER_TARGET}")
