Fix empty OSI SensorView and enabling issues in FMU
Summary of changes:
1. Fix OSI Serialization in API Mode (GT_OSIReporter.cpp):
   - Modified UpdateOSIGroundTruth to unconditionally call SerializeDynamicData (or SerializeDynamicAndStaticData) when in API or API_AND_LOG mode.
   - Previously, serialization was incorrectly skipped if no file or UDP socket was active, resulting in empty data when accessing via C-API.

2. Enable OSI Features in FMU Build (GT_OSMP_FMU/CMakeLists.txt):
   - Added _USE_OSI preprocessor definition to the FMU target.
   - This ensures esminiLib code linked into the FMU compiles OSI-related functions (like SE_GetOSIGroundTruthRaw) instead of stubbing them out.

3. Robustness and Diagnostics (GT_esminiLib.cpp):
   - Added logic to force reset QuitFlag if SE_InitWithArgs succeeds (returns 0) but leaves the flag set (e.g., due to non-fatal warnings).
   - Added diagnostic logging for GT_Step and initialization phases.

--- a/GT_OSMP_FMU/CMakeLists.txt
+++ b/GT_OSMP_FMU/CMakeLists.txt
@@ -152,6 +152,7 @@ add_library(${TARGET} SHARED esmini.cpp
 set_target_properties(${TARGET} PROPERTIES PREFIX "")
 target_compile_definitions(${TARGET} PRIVATE "FMU_SHARED_OBJECT")
 target_compile_definitions(${TARGET} PRIVATE GT_ESMINI_STATIC)
+target_compile_definitions(${TARGET} PRIVATE _USE_OSI)
 
 if(STATIC_LINKING)
     message("Link esmini statically")
