feat: OSMPのUpdate時のIDが問題を解決 元：LocalIDを参照 今：GlobalID→LocalIDに変換して使用

--- a/GT_OSMP_FMU/CMakeLists.txt
+++ b/GT_OSMP_FMU/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-set(TARGET esmini)
+set(TARGET esmini_fmu)
 project(${TARGET})
 
 execute_process(
@@ -151,6 +151,7 @@ add_library(${TARGET} SHARED esmini.cpp
 )
 set_target_properties(${TARGET} PROPERTIES PREFIX "")
 target_compile_definitions(${TARGET} PRIVATE "FMU_SHARED_OBJECT")
+set_target_properties(${TARGET} PROPERTIES OUTPUT_NAME "esmini")
 target_compile_definitions(${TARGET} PRIVATE GT_ESMINI_STATIC)
 target_compile_definitions(${TARGET} PRIVATE _USE_OSI)
 
@@ -174,7 +175,9 @@ if(STATIC_LINKING)
     set(FMT_SHARED OFF)
     set(CMAKE_POSITION_INDEPENDENT_CODE
         ON)
-    add_subdirectory(../externals/fmt fmt)
+    if(NOT TARGET fmt)
+        add_subdirectory(../externals/fmt fmt)
+    endif()
 
     if(LINUX)
         # add link lib for missing filesystem functions in case gcc 7.5 is usedAdd commentMore actions
