--- a/GT_esmini/CMakeLists.txt
+++ b/GT_esmini/CMakeLists.txt
@@ -20,7 +20,8 @@ set(SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/GT_UDP.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/TerrainTracker.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/GT_HostVehicleReporter.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/GT_esminiLib.cpp)
+    ${CMAKE_CURRENT_SOURCE_DIR}/GT_esminiLib.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/GT_esminiRMLib.cpp)
 
 set(INCLUDES
     ${CMAKE_CURRENT_SOURCE_DIR}/ExtraAction.hpp
@@ -32,7 +33,8 @@ set(INCLUDES
     ${CMAKE_CURRENT_SOURCE_DIR}/GT_UDP.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/TerrainTracker.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/GT_HostVehicleReporter.hpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/GT_esminiLib.hpp)
+    ${CMAKE_CURRENT_SOURCE_DIR}/GT_esminiLib.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/GT_esminiRMLib.hpp)
 
 # ############################### Creating library ##################################################################################################
 
@@ -154,7 +156,7 @@ if(BUILD_EXAMPLES)
 endif(BUILD_EXAMPLES)
 
 # ############################### DriverScript DLL Copy ############################################################################################
-# Copy esminiRMLib to DriverScript/bin/ for Python script distribution
+# Copy esminiRMLib and GT_esminiLib to DriverScript/bin/ for Python script distribution
 
 add_custom_command(
     TARGET ${TARGET_SHARED}
@@ -163,5 +165,8 @@ add_custom_command(
     COMMAND ${CMAKE_COMMAND} -E copy
         "$<TARGET_FILE:esminiRMLib>"
         "${CMAKE_SOURCE_DIR}/DriverScript/bin/"
-    COMMENT "Copying esminiRMLib to DriverScript/bin/"
+    COMMAND ${CMAKE_COMMAND} -E copy
+        "$<TARGET_FILE:${TARGET_SHARED}>"
+        "${CMAKE_SOURCE_DIR}/DriverScript/bin/"
+    COMMENT "Copying esminiRMLib and GT_esminiLib to DriverScript/bin/"
 )
